# backtrader-research

./: .gitignore  LICENSE  README.md  _charts.py  _contrarian.py  _final_compare.py  _full_sweep.py  _gap_analysis.py  _real_fees.py  _sweep.py  engine.py  program.md  pyproject.toml  research.yaml  strategy.py  summary.md  sweep.sh  team.md
btresearch/: __init__.py  cache.py  commission.py  config.py  data_provider.py  engine.py  feed.py  metrics.py  output.py  strategy.py  tracker.py
examples/: cn_dividend.yaml  cn_dividend_lowvol.yaml  cn_perm_thresh07_crisis10.yaml  cn_perm_thresh07_crisis10_g3.yaml  cn_perm_thresh07_crisis10_gold.yaml  cn_perm_thresh07_crisis10_gold2.yaml  cn_perm_thresh07_crisis15.yaml  cn_perm_thresh_03.yaml  cn_perm_thresh_05.yaml  cn_perm_thresh_06.yaml  cn_perm_thresh_07.yaml  cn_perm_thresh_08.yaml  cn_perm_thresh_10.yaml  cn_permanent.yaml  cn_permanent_dca.yaml  cn_stockbond.yaml  cn_stockbond_dca.yaml  cn_zhongzheng_red.yaml  dca_cn300_fixed.yaml  dca_sp500_weekly.yaml  dca_sweep_cn.yaml  us_permanent.yaml  us_stockbond.yaml
reports/: 00_summary.md  01_single_assets.md  02_threshold_sweep.md  03_crisis_sweep.md  04_rolling_windows.md  05_dividend_compare.md  06_dca_vs_lumpsum.md  07_optimal_configs.md  autonomous_experiment_report.md  cn_permanent_report.html  cn_permanent_report.md
results/: cn_dividend_lowvol.tsv  dca_sweep_cn.tsv  full_sweep.tsv  results_cn_dividend.tsv  results_cn_permanent.tsv  results_cn_stockbond.tsv  results_us_permanent.tsv  results_us_stockbond.tsv
